# KFinLaw

./: .gitattributes  .gitignore  .mcp.json  README.md  config.yaml
.claude-plugin/: marketplace.json
benchmark/: ANSWER_EVAL.md  AXES.md  RESULTS_round1.md  __init__.py  answer_ctx_cache_semantic.json  answer_runner.py  common.py  corpus.py  hyde_gen.py  hype_cache.json  hype_index.py  lawdoc.py  lightrag_eval.py  lightrag_index.py  make_figures.py  retrieval_runner.py  runner.py
benchmark/eval/: answer_metrics.py  retrieval_metrics.py
benchmark/goldset/: build_goldset.py  questions_lowoverlap.jsonl  spotcheck.py
benchmark/pipeline/: chunkers.py  embedders.py  retrievers.py
benchmark/reports/: answer_LGAI-EXAONE_EXAONE-4.0-32B_good_semantic.json  answer_Qwen_Qwen3.6-27B_good.json  answer_skt_A.X-4.0_good_semantic.json  answer_upstage_Solar-Open-100B_good.json  article_bm25_byp-md.json  article_bm25_byp-md_lowoverlap.json  article_bm25_kure-v1_hype_byp-md_lowoverlap.json  article_bm25_kure-v1_hype_hyde_byp-md.json  article_bm25_kure-v1_hype_hyde_byp-md_lowoverlap.json  article_bm25_kure-v1_hype_hyde_rerank_byp-md.json  (+19 more)
cli/: README.md  kfinlaw.py
mcp/: README.md  lawapi.py  pyproject.toml  requirements.txt  server.py
rag/: README.md
scripts/: collect_laws.py  download_byeolpyo.py  run_answer_matrix.sh  run_reranker_compare.sh  serve_model.sh
serving/: SERVING.md
tool/: README.md  cli.py  pyproject.toml  server.py
tool/.claude-plugin/: plugin.json
tool/kfinlaw/: __init__.py  cli.py  lawapi.py  server.py
tool/kfinlaw_mcp/: server.py
(+3751 files in other folders)
